# bitloops

./: .bitloops.toml  .gitignore  .public_key.txt  .public_key_base64.txt  CHANGELOG.md  CLA.md  CLAUDE_HOOKS_DEV_TEST_STEPS.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOY.md  DEVELOPMENT.md  DevQL-Getting_Started.md  Install.md  LICENSE  README.md  RELEASE.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES  compatibility-plan-1.md  compose.db.yaml  config  devql-knowledge-capability.md  docker-compose.yml  install.ps1  keycloak-setup.sh  plan.md  progress.txt  quickstart.md  realm.json  runbook.md  rust-toolchain.toml  rustfmt.toml  testlens-acceptance.md
TestLens/: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md
TestLens/docs/: PLAN.md  progress.txt  quickstart_ruff_fixture.md  roadmap.txt  rust_test_detection_prd.md  testlens-prototype-prd.md
TestLens/docs/architecture/: overview.md  test_harness_decisions.md
TestLens/docs/validation/: agent_user_stories_ready_now.md  ruff_era001_testlens_user_stories.md  ruff_f523_testlens_user_stories.md  traceability_matrix.md
TestLens/features/: cli_1345.feature  cli_1346.feature  cli_1347.feature  cli_1348.feature  cli_1349.feature  cli_1368.feature  cli_1369.feature  cli_1381.feature  rust_hybrid_detection_e2e.feature  rust_parameterized_linkage_e2e.feature  rust_quickstart_e2e.feature  typescript_full_journey_e2e.feature
TestLens/scripts/: ingest-fixture-coverage.sh  init-fixture-db.sh
TestLens/src/: app.rs  cli.rs  lib.rs  main.rs
TestLens/src/db/: mod.rs  schema.rs  seed.rs
TestLens/src/domain/: mod.rs
TestLens/src/read/: mod.rs  query_test_harness.rs
TestLens/src/repository/: mod.rs  sqlite.rs
TestLens/testlens-fixture/: package-lock.json  tsconfig.json
TestLens/testlens-fixture-rust/: Cargo.toml
TestLens/testlens-fixture-rust/src/: lib.rs
TestLens/testlens-fixture-rust/tests/: user_repository_test.rs  user_service_test.rs
TestLens/testlens-fixture/tests/: UserRepository.test.ts
TestLens/tests/: e2e.rs
TestLens/tests/e2e/: cli_1345_gherkin.rs  cli_1346_gherkin.rs  cli_1347_gherkin.rs  cli_1348_gherkin.rs  cli_1349_gherkin.rs  cli_1368_gherkin.rs  cli_1369_gherkin.rs  cli_1381_gherkin.rs  rust_hybrid_detection_e2e_gherkin.rs  rust_parameterized_linkage_e2e_gherkin.rs  rust_quickstart_e2e_gherkin.rs  typescript_full_journey_e2e_gherkin.rs  validation_report.rs
bitloops/: .coverage-baseline.jsonl  .gitignore  Cargo.toml  RUN.md  TESTING.md  build.rs  research.md  research_summary.md  schema.dashboard.graphql  schema.graphql  schema.slim.graphql
bitloops-embeddings/: Cargo.toml
bitloops-embeddings/src/: config.rs  lib.rs  main.rs  providers.rs  runtime.rs
bitloops/.cargo/: config.toml
bitloops/config/: dashboard_urls.json  dashboard_urls.template.json
bitloops/docs/: architecture-review.md  include-macro-cleanup.md
bitloops/docs/archive/: architecture-review.md
bitloops/docs/test_harness/: quickstart_ruff_bitloops_devql.md  quickstart_ruff_fixture.md
bitloops/examples/: export-dashboard-schema.rs  export-schema.rs  export-slim-schema.rs
bitloops/qat/: README.md
bitloops/scripts/: coverage-baseline-check.sh  test-coverage.sh  test-summary.sh
bitloops/scripts/qa/: semantic_clones_ann_ab.sh
bitloops/src/: adapters.rs  api.rs  artefact_query_planner.rs  capability_packs.rs  cli.rs  config.rs  daemon.rs  devql_timing.rs  devql_transport.rs  git_tests.rs  graphql.rs  host.rs  lib.rs  main.rs  models.rs  runtime_presentation.rs  sqlite_vec_auto_extension.rs  storage.rs  telemetry.rs  test_support.rs  utils.rs  vector_search.rs
bitloops/src/adapters/: agents.rs  connectors.rs  languages.rs
bitloops/src/api/: bundle.rs  bundle_types.rs  dashboard_fallback_install.html  dashboard_file_diffs.rs  dashboard_git.rs  dashboard_params.rs  dashboard_paths.rs  dashboard_runtime.rs  dashboard_schema.rs  dashboard_service.rs  dashboard_types.rs  db.rs  dto.rs  error.rs  handlers.rs  hosts.rs  router.rs  runtime_schema.rs  tests.rs  tls.rs
bitloops/src/capability_packs/: architecture_graph.rs  codecity.rs  context_guidance.rs  http.rs  knowledge.rs  navigation_context.rs  semantic_clones.rs  test_harness.rs
bitloops/src/cli/: agent_surfaces.rs  checkpoints.rs  clean.rs  daemon.rs  dashboard.rs  debug.rs  devql.rs  doctor.rs  embeddings.rs  embeddings_runtime.rs  enable.rs  enable_tests.rs  explain.rs  explain_test.rs  inference.rs  init.rs  login.rs  logout.rs  reset.rs  resume.rs  rewind.rs  root.rs  root_test.rs  status.rs  telemetry_consent.rs  terminal_picker.rs  (+6 more)
bitloops/tests/: agent_cli_smoke.rs  agent_smoke_support.rs  checkpoint_rewind_smoke.rs  claude_git_hooks_integration.rs  copilot_integration.rs  cursor_e2e_scenarios.rs  dashboard_bundle_lifecycle_e2e.rs  documentation_regression.rs  e2e_scenario_groups.rs  graphql.rs  graphql_smoke.rs  performance.rs  production_seed.rs  qat.rs  qat_acceptance.rs  qat_agent_smoke.rs  qat_agents_checkpoints.rs  qat_bundle.rs  qat_develop_gate.rs  qat_devql_capabilities.rs  qat_devql_ingest.rs  qat_devql_sync.rs  qat_devql_sync_producer.rs  qat_internal.rs  qat_internal_support.rs  qat_onboarding.rs  qat_quickstart.rs  qat_smoke.rs  test_command_support.rs  test_command_support_tests.rs  testlens_gherkin.rs  testlens_sqlite_acceptance.rs
bitloops_cli/: .coverage-baseline.json  .coverage-baseline.jsonl  .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  RUN.md  build.rs  install.sh
bitloops_cli/.cargo/: config.toml
bitloops_cli/architecture/: README.md  claude-code-hooks.md  dashboard-bundle-config.md  enable-command.md  settings.md
bitloops_cli/scripts/: coverage-baseline-check.sh  test-coverage.sh
bitloops_cli/src/: api.rs  app.rs  branding.rs  capability_packs.rs  config.rs  devql_config.rs  git.rs  host.rs  lib.rs  main.rs  to_be_deleted_1.rs  utils.rs
bitloops_cli/tests/: claude_git_hooks_integration.rs  copilot_integration.rs  cursor_e2e_scenarios.rs  dashboard_bundle_lifecycle_e2e.rs  e2e_scenario_groups.rs  production_seed.rs  testlens_gherkin.rs  testlens_sqlite_acceptance.rs
(+2902 files in other folders)
