[package]
name = "testlens"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2.5"
chrono = { version = "0.4", default-features = true, features = ["clock"] }

[dev-dependencies]
cucumber = "0.21"
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
