[package]
name = "bitloops-embeddings"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
fastembed = { version = "5.12.1", default-features = false, features = ["hf-hub-rustls-tls", "image-models", "ort-load-dynamic"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bitloops-embeddings-protocol = { path = "../bitloops-embeddings-protocol" }

[dev-dependencies]
tempfile = "3"
