[package]
name = "bitloops"
version = "0.0.11"
edition = "2024"

[features]
default = ["duckdb-bundled"]
# Compile libduckdb from C++ (slow; offline or targets without official prebuilts, e.g. linux-musl cross builds).
duckdb-bundled = ["duckdb/bundled"]
# Compile and expose the QAT command and supporting runtime modules.
qat = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "bitloops"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-axum = "7"
axum = "0.8"
env_logger = "0.11"
figlet-rs = "1.0.0"
cucumber = "0.22.1"
log = "0.4"
notify = "8.2.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tree-sitter = "0.26.7"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24.1"
sha2 = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
terminal_size = "0.4.4"
tokio-postgres = "0.7"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "blocking"] }
rusqlite = { version = "0.39", features = ["bundled"] }
semver = "1"
tar = "0.4"
zstd = "0.13"
duckdb = { version = "1", default-features = false }
object_store = { version = "0.13.2", features = ["aws", "gcp"] }
fastembed = { version = "5.12.1", default-features = false, features = ["hf-hub-rustls-tls", "image-models", "ort-load-dynamic"] }
walkdir = "2.5"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
time = { version = "0.3", features = ["formatting", "macros"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
x509-parser = "0.18.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "service"] }

[dev-dependencies]
cucumber = "0.22.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
time = { version = "0.3", features = ["formatting", "macros"] }
