[package]
name = "bitloops"
version = "0.0.14"
edition = "2024"
autotests = false

[features]
default = []
# Compile libduckdb from C++ (slow; offline or targets without official prebuilts, e.g. linux-musl cross builds).
duckdb-bundled = ["duckdb/bundled"]
# Opt-in integration-style tests that require local Postgres tooling (initdb/pg_ctl).
postgres-tests = []
# Opt-in end-to-end and heavy integration suites.
slow-tests = []
# Opt-in QAT acceptance suites, exposed through the `cargo qat*` aliases.
qat-tests = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "bitloops"
path = "src/main.rs"

[[test]]
name = "documentation_regression"
path = "tests/documentation_regression.rs"

[[test]]
name = "production_seed"
path = "tests/production_seed.rs"

[[test]]
name = "testlens_gherkin"
path = "tests/testlens_gherkin.rs"
required-features = ["slow-tests"]

[[test]]
name = "testlens_sqlite_acceptance"
path = "tests/testlens_sqlite_acceptance.rs"
required-features = ["slow-tests"]

[[test]]
name = "agent_cli_smoke"
path = "tests/agent_cli_smoke.rs"
required-features = ["slow-tests"]

[[test]]
name = "claude_git_hooks_integration"
path = "tests/claude_git_hooks_integration.rs"
required-features = ["slow-tests"]

[[test]]
name = "copilot_integration"
path = "tests/copilot_integration.rs"
required-features = ["slow-tests"]

[[test]]
name = "checkpoint_rewind_smoke"
path = "tests/checkpoint_rewind_smoke.rs"
required-features = ["slow-tests"]

[[test]]
name = "cursor_e2e_scenarios"
path = "tests/cursor_e2e_scenarios.rs"
required-features = ["slow-tests"]

[[test]]
name = "dashboard_bundle_lifecycle_e2e"
path = "tests/dashboard_bundle_lifecycle_e2e.rs"
required-features = ["slow-tests"]

[[test]]
name = "e2e_scenario_groups"
path = "tests/e2e_scenario_groups.rs"
required-features = ["slow-tests"]

[[test]]
name = "graphql"
path = "tests/graphql.rs"
required-features = ["slow-tests"]

[[test]]
name = "graphql_smoke"
path = "tests/graphql_smoke.rs"
required-features = ["slow-tests"]

[[test]]
name = "performance"
path = "tests/performance.rs"
required-features = ["slow-tests"]

[[test]]
name = "qat_acceptance"
path = "tests/qat_acceptance.rs"
required-features = ["qat-tests"]

[[test]]
name = "qat_bundle"
path = "tests/qat_bundle.rs"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-axum = "7"
axum = "0.8"
env_logger = "0.11"
figlet-rs = "1.0.0"
log = "0.4"
notify = "8.2.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml_edit = { version = "0.25", features = ["serde"] }
regex = "1"
tree-sitter = "0.26.7"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24.1"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
sha2 = "0.11"
sha1 = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
terminal_size = "0.4.4"
tokio-postgres = "0.7"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "blocking"] }
rusqlite = { version = "0.39", features = ["bundled"] }
semver = "1"
tar = "0.4"
xz2 = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
zstd = "0.13"
duckdb = { version = "1", default-features = false }
object_store = { version = "0.13.2", features = ["aws", "gcp"] }
walkdir = "2.5"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
rustls = "0.23"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
rustls-pemfile = "2"
x509-parser = "0.18.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "service"] }
dirs = "6"
futures-util = "0.3"
libc = "0.2"
hnsw_rs = "0.3.4"

[dev-dependencies]
cucumber = "0.22.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
time = { version = "0.3", features = ["formatting", "macros"] }
