[package]
name = "bitloops_cli"
version = "0.0.9"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bitloops"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
env_logger = "0.11"
figlet-rs = "0.1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
terminal_size = "0.2"
tokio-postgres = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
