[package]
name = "bitloops_cli"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bitloops"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
env_logger = "0.11"
figlet-rs = "0.1"
log = "0.4"
notify = "6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
terminal_size = "0.2"
tokio-postgres = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
semver = "1"
tar = "0.4"
zstd = "0.13"
duckdb = { version = "1", features = ["bundled"] }
object_store = { version = "0.12.4", features = ["aws", "gcp"] }
fastembed = "5.12.1"
walkdir = "2.5"
chrono = { version = "0.4", default-features = true, features = ["clock"] }

[dev-dependencies]
cucumber = "0.22.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
time = { version = "0.3", features = ["formatting", "macros"] }
